Language Models Lecture

--- a/08_Sentiment_Analysis/Sentiment_Analysis_with_RNNs.ipynb
+++ b/08_Sentiment_Analysis/Sentiment_Analysis_with_RNNs.ipynb
@@ -95,7 +95,7 @@
       "source": [
         "dataset, info = tfds.load('imdb_reviews', with_info=True,\n",
         "                          as_supervised=True)\n",
-        "train_dataset, test_dataset = ?\n",
+        "train_dataset, test_dataset = dataset['train'], dataset['test']\n",
         "\n",
         "train_dataset.element_spec"
       ]
@@ -117,7 +117,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "for example, label in train_dataset.take(1):\n",
+        "  print('text: ', example.numpy())\n",
+        "  print('label: ', label.numpy())"
       ]
     },
     {
@@ -161,7 +163,10 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "for example, label in train_dataset.take(1):\n",
+        "  print('texts: ', example.numpy()[:3])\n",
+        "  print()\n",
+        "  print('labels: ', label.numpy()[:3])"
       ]
     },
     {
@@ -192,7 +197,10 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "VOCAB_SIZE = 1000\n",
+        "encoder = tf.keras.layers.TextVectorization(\n",
+        "    max_tokens=VOCAB_SIZE)\n",
+        "encoder.adapt(train_dataset.map(lambda text, label: text))"
       ]
     },
     {
@@ -208,15 +216,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "tBoyjjWg0Ac9",
+        "outputId": "30559918-a31e-4992-bd9e-d084fd11f980",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "tBoyjjWg0Ac9",
-        "outputId": "30559918-a31e-4992-bd9e-d084fd11f980"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['', '[UNK]', 'the', 'and', 'a', 'of', 'to', 'is', 'in', 'it', 'i',\n",
+              "       'this', 'that', 'br', 'was', 'as', 'for', 'with', 'movie', 'but'],\n",
+              "      dtype='<U14')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
-        "?"
+        "vocab = np.array(encoder.get_vocabulary())\n",
+        "vocab[:20]"
       ]
     },
     {
@@ -236,7 +258,8 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "encoded_example = encoder(example)[:3].numpy()\n",
+        "encoded_example"
       ]
     },
     {
@@ -328,7 +351,15 @@
       "outputs": [],
       "source": [
         "model = tf.keras.Sequential([\n",
-        "?\n",
+        "    encoder,\n",
+        "    tf.keras.layers.Embedding(\n",
+        "        input_dim=len(encoder.get_vocabulary()),\n",
+        "        output_dim=64,\n",
+        "        # Use masking to handle the variable sequence lengths\n",
+        "        mask_zero=True),\n",
+        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1)\n",
         "])"
       ]
     },
@@ -358,7 +389,7 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "print([layer.supports_masking for layer in model.layers])"
       ]
     },
     {
@@ -427,7 +458,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "model.compile(loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+        "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
+        "              metrics=['accuracy'])"
       ]
     },
     {
@@ -447,7 +480,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "history = model.fit(train_dataset, epochs=10,\n",
+        "                    validation_data=test_dataset,\n",
+        "                    validation_steps=30)"
       ]
     },
     {
@@ -458,7 +493,7 @@
       },
       "outputs": [],
       "source": [
-        "?\n",
+        "test_loss, test_acc = model.evaluate(test_dataset)\n",
         "\n",
         "print('Test Loss:', test_loss)\n",
         "print('Test Accuracy:', test_acc)"
@@ -543,7 +578,13 @@
       "outputs": [],
       "source": [
         "model = tf.keras.Sequential([\n",
-        "?\n",
+        "    encoder,\n",
+        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 64, mask_zero=True),\n",
+        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64,  return_sequences=True)),\n",
+        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dropout(0.5),\n",
+        "    tf.keras.layers.Dense(1)\n",
         "])"
       ]
     },
@@ -555,7 +596,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "model.compile(loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+        "              optimizer=tf.keras.optimizers.Adam(1e-4),\n",
+        "              metrics=['accuracy'])"
       ]
     },
     {
@@ -566,7 +609,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "history = model.fit(train_dataset, epochs=10,\n",
+        "                    validation_data=test_dataset,\n",
+        "                    validation_steps=30)"
       ]
     },
     {
@@ -585,25 +630,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "model.save(\"my_model\")"
+      ],
       "metadata": {
         "id": "RBJqcVo7wW-J"
       },
-      "outputs": [],
-      "source": [
-        "model.save(\"my_model\")"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "model = tf.keras.models.load_model(\"my_model\")"
+      ],
       "metadata": {
         "id": "lBktf7z8wXXU"
       },
-      "outputs": [],
-      "source": [
-        "model = tf.keras.models.load_model(\"my_model\")"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
