--- a/09_Transfer_Learning_and_Knowledge_Distillation/Transfer_Learning.ipynb
+++ b/09_Transfer_Learning_and_Knowledge_Distillation/Transfer_Learning.ipynb
@@ -46,9 +46,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "jPLamYaR7CM1"
-      },
       "source": [
         "You will follow the general machine learning workflow.\n",
         "\n",
@@ -59,7 +56,10 @@
         "   * Stack the classification layers on top\n",
         "1. Train the model\n",
         "1. Evaluate model"
-      ]
+      ],
+      "metadata": {
+        "id": "jPLamYaR7CM1"
+      }
     },
     {
       "cell_type": "markdown",
@@ -247,7 +247,10 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "data_augmentation = tf.keras.Sequential([\n",
+        "  tf.keras.layers.RandomFlip('horizontal'),\n",
+        "  tf.keras.layers.RandomRotation(0.2),\n",
+        "])"
       ]
     },
     {
@@ -351,9 +354,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "NlTTm9XJ7xfc"
-      },
       "source": [
         "First, you need to pick ***which layer of MobileNet V2 you will use*** for feature extraction.\n",
         "- The very last classification layer (on \"top\", as most diagrams of machine learning models go from bottom to top) is not very useful.\n",
@@ -361,7 +361,10 @@
         "- The bottleneck layer features retain more generality as compared to the final/top layer.\n",
         "\n",
         "First, instantiate a MobileNet V2 model pre-loaded with weights trained on ImageNet. By specifying the **include_top=False** argument, you load a network that doesn't include the classification layers at the top, which is ideal for feature extraction."
-      ]
+      ],
+      "metadata": {
+        "id": "NlTTm9XJ7xfc"
+      }
     },
     {
       "cell_type": "code",
@@ -436,7 +439,7 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "base_model.trainable = False"
       ]
     },
     {
@@ -516,7 +519,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "prediction_layer = tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "prediction_batch = prediction_layer(feature_batch_average)\n",
+        "print(prediction_batch.shape)"
       ]
     },
     {
@@ -536,7 +541,14 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "inputs = tf.keras.Input(shape=(160, 160, 3))\n",
+        "x = data_augmentation(inputs)\n",
+        "x = preprocess_input(x)\n",
+        "x = base_model(x, training=False)\n",
+        "x = global_average_layer(x)\n",
+        "x = tf.keras.layers.Dropout(0.2)(x)\n",
+        "outputs = prediction_layer(x)\n",
+        "model = tf.keras.Model(inputs, outputs)"
       ]
     },
     {
@@ -600,7 +612,10 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "base_learning_rate = 0.0001\n",
+        "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=base_learning_rate),\n",
+        "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "              metrics=[tf.keras.metrics.BinaryAccuracy(threshold=0.5, name='accuracy')])"
       ]
     },
     {
@@ -631,16 +646,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "8cYT1c48CuSd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8cYT1c48CuSd",
         "outputId": "c9bd9177-f76e-4b66-cfea-e102dff61ab9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "initial loss: 0.89\n",
             "initial accuracy: 0.48\n"
@@ -660,7 +675,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "history = model.fit(train_dataset,\n",
+        "                    epochs=initial_epochs,\n",
+        "                    validation_data=validation_dataset)"
       ]
     },
     {
@@ -762,23 +779,23 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "base_model.trainable = True"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "-4HgVAacRs5v",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-4HgVAacRs5v",
         "outputId": "7d678ee2-754e-4cf8-be48-fc25ca2881f2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Number of layers in the base model:  154\n"
           ]
@@ -815,7 +832,9 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+        "              optimizer = tf.keras.optimizers.RMSprop(learning_rate=base_learning_rate/10),\n",
+        "              metrics=[tf.keras.metrics.BinaryAccuracy(threshold=0.5, name='accuracy')])"
       ]
     },
     {
@@ -866,7 +885,13 @@
       },
       "outputs": [],
       "source": [
-        "?"
+        "fine_tune_epochs = 10\n",
+        "total_epochs =  initial_epochs + fine_tune_epochs\n",
+        "\n",
+        "history_fine = model.fit(train_dataset,\n",
+        "                         epochs=total_epochs,\n",
+        "                         initial_epoch=len(history.epoch),\n",
+        "                         validation_data=validation_dataset)"
       ]
     },
     {
@@ -956,13 +981,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "2KyNhagHwfar",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2KyNhagHwfar",
         "outputId": "09e26c72-d6d8-4703-f844-d98151ee52ec"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6/6 [==============================] - 1s 54ms/step - loss: 0.0119 - accuracy: 1.0000\n",
+            "Test accuracy : 1.0\n"
+          ]
+        }
+      ],
       "source": [
         "loss, accuracy = model.evaluate(test_dataset)\n",
         "print('Test accuracy :', accuracy)"
@@ -1023,13 +1057,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vrGya6s0rsKl"
-      },
       "source": [
         "#### **Credits**\n",
         "[https://www.tensorflow.org/tutorials/images/transfer_learning](https://www.tensorflow.org/tutorials/images/transfer_learning)"
-      ]
+      ],
+      "metadata": {
+        "id": "vrGya6s0rsKl"
+      }
     },
     {
       "cell_type": "code",
